@@ -1,3 +1,8 @@
+2006-08-23  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/consumers/httpstreamer/http.py:
+	  Change getStreamData to return 'url' and 'description'
+
 2006-08-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/feedcomponent010.py:
